add_subdirectory(ahx)
add_subdirectory(audsrv)
add_subdirectory(camera)
add_subdirectory(cdvd)
add_subdirectory(filexio)
add_subdirectory(hdd)
add_subdirectory(keyboard)
add_subdirectory(memorycard)
add_subdirectory(mouse)
add_subdirectory(multitap)
add_subdirectory(pad)
add_subdirectory(poweroff)
add_subdirectory(ps2snd)
add_subdirectory(remote)
add_subdirectory(secr)
add_subdirectory(sior)
add_subdirectory(tcpips)