add_library(pad)
target_include_directories(pad PUBLIC include)
target_include_directories(pad PRIVATE ${EE_INC})
target_sources(pad PRIVATE src/libpad.c src/erl-support.c)
install(TARGETS pad)
target_add_erl(pad)

add_library(padx)
target_include_directories(padx PUBLIC include)
target_include_directories(padx PRIVATE ${EE_INC})
target_compile_definitions(padx PRIVATE _XPAD)
target_sources(padx PRIVATE src/libpad.c src/erl-support.c)
install(TARGETS padx)
target_add_erl(padx)